--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tennis Team Tracker</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Add Babel Standalone for in-browser transpilation -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="importmap">
 {
   "imports": {
@@ -19,6 +21,7 @@
 </head>
 <body class="bg-gray-50">
     <div id="root"></div>
-    <script type="module" src="index.tsx"></script>
+    <!-- Change script type to "text/babel" and add data-type="module" for Babel to process it -->
+    <script type="text/babel" data-type="module" src="index.tsx"></script>
 </body>
 </html>
