--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body class="bg-gray-50">
     <div id="root"></div>
-    <!-- Change script type to "text/babel" and add data-type="module" for Babel to process it -->
-    <script type="text/babel" data-type="module" src="index.tsx"></script>
+    <!-- Configure Babel to transpile React and TypeScript -->
+    <script type="text/babel" data-presets="react,typescript" data-type="module" src="index.tsx"></script>
 </body>
 </html>
